minor style tweaks

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -4,7 +4,7 @@
     <h2>Ruby Core Team</h2>
   </hgroup>
 
-  <%= link_to 'fork me', 'http://github.com/tenderlove/rubycommitters.org', :title => 'Fork me on GitHub', :class => 'fork-me' %>
+  <a href="http://github.com/tenderlove/rubycommitters.org" class="fork-me">Fork me <span>on gitub</span></a>
 </header>
 
 <article class="team-list box">
