--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -25,6 +25,7 @@ header, section, footer, aside, nav, article, figure { display: block; }
 
 body {
   background: #eee;
+  color: rgba(0, 0 ,0, .8);
   font: normal 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -82,36 +83,41 @@ h1 {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
   display: block;
   float: left;
-  margin: 10px;
+  margin: 15px;
   min-height: 200px;
-  padding-bottom: 30px;
   position: relative;
-  -webkit-transition: -webkit-box-shadow .25s linear;
-  width: 300px;
+  -webkit-transition: -webkit-box-shadow .175s linear;
+  width: 290px;
 }
 
 .card:hover {
-  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, .6);
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, .4);
 }
 
 h2 {
   font-size: 15px;
 }
 
-.photo {
-/*  display: none;*/
+.frame {
+  background: #fff;
+  -webkit-box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .2);
+  padding: 5px;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: -10px;
+  top: -1px;
+  -webkit-transform: rotate(4deg);
   width: 100px;
+}
+
+.photo {
+  position: relative;
 }
 
 img {
   display: block;
-/*  min-height: 100%;*/
   width: 100%;
 }
-/*
+
 .photo:after {
     content: " "; 
     display: block;
@@ -128,7 +134,18 @@ img {
     -webkit-background-origin: border-box;
     -moz-background-origin: border;
     background-origin: border-box;
-}*/
+}
+
+.frame:after {
+  background: url('/images/paperclip.png') no-repeat;
+  content: " "; 
+  display: block;
+  height: 32px;
+  position: absolute;
+  right: 20px;
+  top: -8px;
+  width: 32px;
+}
 
 .info {
 /*  display: none;*/
