--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,13 @@
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <a href="http://github.com/you"><img style="position: fixed; top: 0; left: 0; border: 0;" src="https://assets1.github.com/img/5d21241b64dc708fcbb701f68f72f41e9f1fadd6?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_left_red_aa0000.png&path=" alt="Fork me on GitHub"></a>
+    <a href="http://github.com/tenderlove/rubycommitters.org"><img style="position: fixed; top: 0; left: 0; border: 0; z-index: 10;" src="https://assets1.github.com/img/5d21241b64dc708fcbb701f68f72f41e9f1fadd6?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_left_red_aa0000.png&path=" alt="Fork me on GitHub"></a>
     
   <div id="container">
     <header id="site-header">
       <h1 id="logo"><%= link_to "Ruby Committers", root_url %></h1>
+      <h2 id="tagline">A Ruby program<br/>before I even notice<br/>is already done.</h2>
+      <h3 id="intro">Meet the contributors that brought you the sexiest programming language in the history of everything.</h3>
     </header>
     <section id="content">
       <%= yield %>
