--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -97,7 +97,6 @@ a:hover {
   margin-bottom: -160px;
 	margin:0 auto;
 	width:960px;
-	padding:10px;
 }
 .clear {
   height: 0;
@@ -105,24 +104,53 @@ a:hover {
 }
 
 #site-header{
-	
+	overflow: auto;
+}
+#site-header h1 {
+  float: left;
+  margin: 0;
+  font-family: 'Lato', arial, serif;
 }
 
 #logo{
-	font-size:48px;
+	font-size: 20px;
 	font-weight:bold;
 	margin:25px 0 5px;
 }
-#logo a{
-  color:#333;
+#logo a {
+  background: #C31E2A;
+  border-bottom: 5px solid #8b030b;
+  padding: 40px 20px 5px 20px;
+  display: block;
+  color: #fff;
   text-decoration:none;
-  text-shadow: 0 1px 1px white;
+  margin-bottom: 20px;
 }
 #logo a:hover{
-  color:#999;
-  background: none;
+  background: #b41c27;
 }
-
+#tagline {
+  float: left;
+  margin: 8px 20px;
+  text-shadow: 0 1px 1px #fff;
+  color: #444;
+  font-size: 16px;
+  line-height: 23px;
+}
+#intro {
+  float: left;
+  font-size: 38px;
+  text-shadow: 0 1px 1px #fff;
+  color: #444;
+  margin-bottom: 20px;
+}
+#stats {
+  float: left;
+  margin-top: 15px;
+  font-weight: bold;
+  color: #444;
+  text-shadow: 0 1px 1px white;
+}
 p{
   margin:0 0 10px;
 }
