--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,3 +1,4 @@
+<h3 id="intro">Meet the contributors that brought you the sexiest programming language in the history of everything.</h3>
 <div id="filter">
   <span class="results"></span>
   <input id="filter_by_username" type="text" placeholder="Search by username">
