--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -166,6 +166,9 @@ p{
   color: #444;
   font-weight: bold;
 }
+input::-webkit-input-placeholder {
+    color: #666;
+}
 #filter_by_username {
   width: 200px;
   font-size: 16px;
