--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -98,20 +98,25 @@ h2 {
   font-size: 15px;
 }
 
+.portrait {
+  position: absolute;
+  right: -10px;
+  top: -1px;
+  width: 100px;
+}
+
 .frame {
   background: #fff;
   -webkit-box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .2);
   padding: 5px;
-  position: absolute;
-  right: -10px;
-  top: -1px;
-  -webkit-transform: rotate(4deg);
-  width: 100px;
 }
 
-.photo {
-  position: relative;
-}
+.tl5 { -webkit-transform: rotate(5deg); }
+.tr5 { -webkit-transform: rotate(-5deg); }
+.tl3 { -webkit-transform: rotate(3deg); }
+.tr3 { -webkit-transform: rotate(-3deg); }
+
+.photo { position: relative; }
 
 img {
   display: block;
@@ -119,31 +124,26 @@ img {
 }
 
 .photo:after {
-    content: " "; 
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border: 1px solid rgba(255, 255, 255, .1);
-    border-bottom: 0;
-    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255, 255, 255, .15)), to(rgba(0, 0, 0, .25))), -webkit-gradient(linear, left top, right bottom, color-stop(0, rgba(255, 255, 255, 0)), color-stop(0.5, rgba(255, 255, 255, .1)), color-stop(0.501, rgba(255, 255, 255, 0)), color-stop(1, rgba(255, 255, 255, 0)));
-    background: -moz-linear-gradient(top, rgba(255, 255, 255, .15), rgba(0, 0, 0, .25)), -moz-linear-gradient(left top, rgba(255, 255, 255, 0), rgba(255, 255, 255, .1) 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0));
-    background: linear-gradient(top, rgba(255, 255, 255, .15), rgba(0, 0, 0, .25)), linear-gradient(left top, rgba(255, 255, 255, 0), rgba(255, 255, 255, .1) 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0));
-    -webkit-background-origin: border-box;
-    -moz-background-origin: border;
-    background-origin: border-box;
+  bottom: 0;
+  content: " "; 
+  display: block;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(255, 255, 255, .15)), to(rgba(0, 0, 0, .25))), -webkit-gradient(linear, left top, right bottom, color-stop(0, rgba(255, 255, 255, 0)), color-stop(0.5, rgba(255, 255, 255, .1)), color-stop(0.501, rgba(255, 255, 255, 0)), color-stop(1, rgba(255, 255, 255, 0)));
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, .15), rgba(0, 0, 0, .25)), -moz-linear-gradient(left top, rgba(255, 255, 255, 0), rgba(255, 255, 255, .1) 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0));
+  background: linear-gradient(top, rgba(255, 255, 255, .15), rgba(0, 0, 0, .25)), linear-gradient(left top, rgba(255, 255, 255, 0), rgba(255, 255, 255, .1) 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0));
 }
 
-.frame:after {
+.portrait:after {
   background: url('/images/paperclip.png') no-repeat;
   content: " "; 
   display: block;
   height: 32px;
   position: absolute;
-  right: 20px;
-  top: -8px;
+  right: 26px;
+  top: -6px;
   width: 32px;
 }
 
