Added byline for haiku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <div id="container">
     <header id="site-header">
       <h1 id="logo"><%= link_to "Ruby Committers", root_url %></h1>
-      <h2 id="tagline">A Ruby program<br/>before I even notice<br/>is already done.</h2>
+      <h2 id="tagline">A Ruby program<br/>before I even notice<br/>is already done. <span class="byline">Robert Cottrell</span></h2>
     </header>
     <section id="content">
       <%= yield %>
