--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <![endif]-->
   <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body class="">
     <a href="http://github.com/you"><img style="position: fixed; top: 0; left: 0; border: 0;" src="https://assets1.github.com/img/5d21241b64dc708fcbb701f68f72f41e9f1fadd6?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_left_red_aa0000.png&path=" alt="Fork me on GitHub"></a>
     
   <div id="container">
@@ -29,6 +29,7 @@
                               'https://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js',
         'http://cachedcommons.org/cache/jquery-colorbox/1.3.9/javascripts/jquery-colorbox-min.js',
                               'jquery.equalheights',
+                              'jquery.masonry.min',
                               'application' %>
 </body>
 </html>
