beginning media query styles for mobile. header needs work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag 'modernizr-1.6.min' %>
   <%= csrf_meta_tag %>
   <%= analytics_tag %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes" />
 </head>
 <body>
 
