Style tweaks, add red paddle buttons, add personal credit

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,3 +8,7 @@
     = analytics_tag
   %body
     = yield
+    .footer
+      .credits
+        .ejc.logo= link_to image_tag('ejc_inset.png', :alt => 'Designed by E.J. Coughlin <3'), 'http://twitter.com/ejc'
+        .ejc.words= link_to 'Designed by E.J. Coughlin <3', 'http://twitter.com/ejc'
