--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,11 +1,11 @@
 body	{background: #333 url(/images/dark_noise.png);}
 .fork a	{position: absolute;top:0;left: 0;width:149px;height: 149px;display:block;text-indent: -9000px;background: url(/images/fork_me_ruby_red.png) no-repeat;}
-.header {width:600px; margin: 30px auto 0;height:115px;}
+.header {width:600px; margin: 40px auto 0;height:115px;}
 
 .header h1 {text-indent: -9000px;background: url(/images/logo_inset.png) no-repeat;width:600px;height:80px;margin: 0 0 0 0;}
 
 /* Member Cards */
-.item	{float: left;width: 300px !important;height:250px;padding:15px 5px 5px 15px;margin: 0 10px 10px 0;background: transparent url(/images/user_card.png) no-repeat;}
+.item	{float: left;width: 300px !important;height:250px;padding:15px 5px 5px 15px;margin: 0 3px 10px 0;background: transparent url(/images/user_card.png) no-repeat;}
 
 
 .column {}
@@ -37,3 +37,8 @@ body	{background: #333 url(/images/dark_noise.png);}
 .icon a.facebook	{background-position: -61px 0;}
 .icon a.iddy		{background-position: -77px 0;}
 .icon a.mixi		{background-position: -92px 0;}
+
+.footer	{width: 100%;padding: 20px 0 0;}
+.footer .credits	{width: 310px;margin:0 auto;position: relative;}
+.footer .credits .ejc {float: left;}
+.footer .credits .ejc.words	{margin: 17px}
