--- a/public/stylesheets/typography.css
+++ b/public/stylesheets/typography.css
@@ -1,4 +1,3 @@
-/* @override http://localhost:3000/stylesheets/typography.css?1294243160 */
 /* --------------------------------------------------------------
 
    typography.css
@@ -37,7 +36,7 @@ body {
 h1,h2,h3,h4,h5,h6 { font-family: Helvetica, arial, sans-serif; color: #181818; font-weight: normal; }
 
 h1 { font-size: 3em; line-height: 1; margin: .2em 0 0.5em; }
-h2 { font-size: 1.8em; margin-bottom: 10px;}
+h2 { font-size: 2em; margin-bottom: 10px;}
 h3 { font-size: .8em; line-height: 1.25em; margin: 0 0 3px; text-transform: uppercase;font-weight:normal;}
 h4 { font-size: 1.4em; line-height: 1.25; margin: 0 0 6px; }
 h5 { font-size: 1em; margin: 0 0 6px; }
@@ -52,3 +51,4 @@ h1:first-child, h2:first-child { margin-top: 0; }
 .meta, .meta a {color: #333;text-shadow:1px 1px #FFF;}
 .meta a {color: #ab0d00;text-decoration:none;}
 .meta a:hover {color: #ab0d00;text-decoration:underline;}
+.footer .credits .ejc.words a	{color: #111;text-shadow: 1px 1px #555;text-decoration: none;font-weight:550;font-size:1.1em; }
