--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -25,7 +25,7 @@ header, section, footer, aside, nav, article, figure { display: block; }
 
 body {
   background: #eee;
-  color: rgba(0, 0 ,0, .8);
+  color: rgba(0, 0 ,0, .6);
   font: normal 14px/30px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -79,8 +79,7 @@ h1 {
 }
 
 .card {
-  background: #fff;
-/*  background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(.5, #f6f6f6), color-stop(.501, #eee), to(#fff));*/
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f6f6f6));
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
   display: block;
   float: left;
@@ -90,6 +89,8 @@ h1 {
   -webkit-transition: -webkit-box-shadow .175s linear;
   width: 290px;
 }
+
+.creased { background: -webkit-gradient(linear, left top, left bottom, from(#fff), color-stop(.5, #f6f6f6), color-stop(.501, #eee), to(#fff)); }
 
 .card:after {
   border-right: 3px double rgba(217, 163, 192, .3);
@@ -106,11 +107,7 @@ h1 {
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, .4);
 }
 
-h2 {
-  border-bottom: 1px solid rgba(173, 192, 204, .3);
-  font-size: 15px;
-  padding: 25px 0 25px 50px;
-}
+/* =PORTRAITS */
 
 .portrait {
   position: absolute;
@@ -165,18 +162,37 @@ img {
   width: 32px;
 }
 
-.left:after { right: 24px; }
-.right:after { right: 34px; }
+.left .portrait:after { right: 24px; }
+.right .portrait:after { right: 34px; }
 
-.info {
-  background: url('/images/user-24x24.png') 3px 3px no-repeat;
+/* =INFO */
+
+h2 {
+  border-bottom: 1px solid rgba(173, 192, 204, .4);
+  color: rgba(0, 0, 0, .8);
+  font-size: 16px;
+  padding: 25px 0 25px 40px;
+}
+
+.info { background: url('/images/user-24x24.png') 3px 3px no-repeat; }
+
+.card li {
+  border-bottom: 1px solid rgba(173, 192, 204, .2);
   padding-left: 40px;
 }
+
+.nicks {
+  color: rgba(0, 0, 0, .3);
+  font-size: 13px;
+}
+
+.nicks:before, .nicks:after { content: '"'; }
 
 .services li {
   background: #aaa;
   display: block;
   float: left;
   height: 30px;
+  padding: 0;
   width: 30px;
 }
