IE fix for grouping info in div.

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <article class="account clear">
+  <article class="account group clear">
 
     <section class="account-name">
       <label>Username &mdash;</label>
